# trove-specs

./: .coveragerc  .gitreview  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  template.rst  tox.ini
doc/source/: conf.py  contributing.rst  index.rst  template.rst
specs/: template.rst
specs/kilo/: add-instance-name-to-cli.rst  associate-flavors-datastores.rst  couchdb_plugin.rst  datastore-visibility.rst  db2_plugin.rst  example-generator.rst  experimental-datastores.rst  guest-rpc-ping-pong.rst  mgmt-show-deleted.rst  moving-trove-guestagent.rst  native-os-heat-resources.rst  placeholder.rst  replication-v2.rst  rsync-optional.rst  switch-to-oslo-messaging.rst  vertica-cluster.rst  vertica-datastore.rst
specs/liberty/: cassandra-backup-restore.rst  cassandra-configuration-groups.rst  cassandra-database-user-functions.rst  cluster-root-enable.rst  cluster-scaling.rst  datastore-registration-api.rst  guestagent-configuration-manager.rst  mariadb-datastore-support.rst  mongodb-backup-restore.rst  mongodb-configuration-groups.rst  mongodb-database.rst  mongodb-users.rst  mysql-manager-refactor.rst  percona-cluster.rst  redis-backup-restore.rst  redis-cluster.rst  redis-configuration-groups.rst  redis-replication.rst  root-disable.rst
specs/mitaka/: cassandra-cluster.rst  cassandra-root-enable.rst  ceilometer-integration.rst  couchdb-backup-restore.rst  couchdb-database-user-functions.rst  datastore-log-operations.rst  datastore-manager-refactor.rst  db2-backup-restore.rst  mariadb-clustering.rst  mariadb-gtid-replication.rst  (+11 more)
tests/: test_titles.py
(+24 files in other folders)
