[metadata]
name = trove-specs
summary = OpenStack Database Service (Trove) Specifications
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://specs.openstack.org/openstack/trove-specs/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
